# CPS-SORTER

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.cfg
.asfaultenv/cfg/: evolution.json  execution.json  plot.json  random_evo.json
src/cps_sorter/: __init__.py  __main__.py  cli.py
src/cps_sorter/services/: model_evaluator.py  performance_testing.py  real_time_experiments.py  road_transformer.py  utility.py  weka_helper.py
