[metadata]
name = cps_sorter
description = Machine Learning Based Testing
author = Bill Bosshard
author-email = bill.bosshard@outlook.com
license = mit
url = https://github.com/billbos/CPS-SORTER
long-description = file: README.rst
platforms = windows
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires = numpy; scipy; click; Jinja2; matplotlib; networkx; Pyqtree; shapely; pandas; seaborn; descartes

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
console_scripts =
    cps_sorter = cps_sorter.cli:cli

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 1.0
package = cps_sorter
